--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "mongo"]
 	path = mongo
-	url = /home/ubuntu/GIT/mongodb-without-avx/mongo
-	branch = master
+	url = https://github.com/mongodb/mongo.git
