--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,14 +5,54 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
 
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        - include:
+            mongo_version: 6.0.2
+            platforms: |-
+              linux/amd64
+
+        - include:
+            mongo_version: 5.0.20
+            platforms: |-
+              linux/amd64
+              linux/arm64
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2.2.0
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2.9.1
+
+    - name: Login to Docker registry
+      uses: docker/login-action@v2.2.0
+      with:
+        registry: ${{ env.ORG_NAME }}
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+    - name: Build and push ${{ matrix.name }}
+      uses: docker/build-push-action@v4.1.1
+      with:
+        context: .
+        file: Dockerfile
+        platforms: ${{ matrix.platforms }}
+        build-args: -|
+          NUM_JOBS=8
+          MONGO_VERSION=${{ matrix.mongo_version }}
+        push: true
+        tags: ${{ secrets.DOCKER_HUB_USER }}/mongo-wo-avx:${{ matrix.mongo_version }}
+        labels: |
+          maintainer=${{ github.repository_owner }}
+          org.opencontainers.image.vendor=${{ github.repository_owner }}
+          org.opencontainers.image.revision=${{ github.sha }}
